--- a/src/app/features/notfound/notfound.html
+++ b/src/app/features/notfound/notfound.html
@@ -1,1 +1,18 @@
-<p>notfound works!</p>
+<section class="min-h-[70vh] flex flex-col items-center justify-center bg-gray-50 dark:bg-gray-900 px-4 text-center">
+  <img src="/images/error.svg" alt="Not Found" class="w-90 h-52 mb-4" />
+
+  <h1 class="text-3xl sm:text-4xl font-bold text-main dark:text-main mb-3">
+    Page Not Found
+  </h1>
+
+  <p class="text-gray-600 dark:text-gray-300 text-sm sm:text-base mb-5 max-w-md">
+    Oops! The page you're looking for doesn't exist or has been moved.<br />
+  </p>
+
+  <button
+    routerLink="/"
+    class="inline-block bg-gradient-to-r cursor-pointer from-main to-emerald-600 text-white px-6 py-2 rounded-full font-semibold hover:scale-105 transition duration-300 shadow-md"
+  >
+     Go Home
+  </button>
+</section>
