--- a/src/app/features/all-orders/all-orders.html
+++ b/src/app/features/all-orders/all-orders.html
@@ -10,7 +10,7 @@
       </div>
     } @else {
       <div class="space-y-6">
-        @for (order of orders; track order._id) {
+        @for (order of orders.slice().reverse(); track order._id) {
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md p-6 border-l-4 border-green-500 dark:border-emerald-500">
             <div class="flex justify-between items-center mb-4">
               <h3 class="text-lg font-bold text-gray-800 dark:text-white">Order {{order.user.name}}</h3>
