--- a/src/app/features/product-details/product-details.html
+++ b/src/app/features/product-details/product-details.html
@@ -70,7 +70,7 @@
         (click)="addProductCart(productDetails?._id)"
         class="w-full mt-3 cursor-pointer active:scale-95 transition-all duration-150 bg-main text-white py-1.5 rounded"
       >
-        <i class="fa-solid fa-plus" style="color: #ffffff"></i>Add to cart
+        <i class="fa-solid fa-plus" style="color: #ffffff"></i>{{ 'products.add' | translate }}
       </button>
     </div>
   </div>
