--- a/src/app/features/reset-password/reset-password.html
+++ b/src/app/features/reset-password/reset-password.html
@@ -11,9 +11,9 @@
             <div class="w-1/3 h-2 bg-gray-400 rounded" [class.!bg-main]="step >= 3"></div>
         </div>
 
-        <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">Forget Password</h1>
+        <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">{{"forgetForm.title" |translate}}</h1>
         <p class="text-sm text-gray-500 text-center mb-3.5">
-            Please fill in your email to send you the code.
+            {{"forgetForm.subtitle" |translate}}
         </p>
 
         <form (ngSubmit)="handleFPsubmit()" [formGroup]="forgetPasswordGroup" class="max-w-md mx-auto">
@@ -26,23 +26,23 @@
                 @if (forgetPasswordGroup.get('email')?.touched && forgetPasswordGroup.get('email')?.errors) {
                 <div class="p-4 my-2 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400">
                     @if (forgetPasswordGroup.get('email')?.getError('required')) {
-                    <p>Email is required</p>
+                    <p>{{"forgetForm.emailError" |translate}}</p>
                     } @else if (forgetPasswordGroup.get('email')?.getError('email')) {
-                    <p>Invalid email format (example@email.com)</p>
+                    <p>{{"forgetForm.emailError2" |translate}}</p>
                     }
                 </div>
                 }
 
                 <label for="floating_email"
-                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email
-                    address</label>
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"forgetForm.email" |translate}}
+                </label>
             </div>
             <button [disabled]="isLoading" type="submit"
                 class="text-white bg-main hover:bg-transparent hover:border hover:border-main hover:text-main font-medium rounded-lg mt-2.5 text-sm w-full px-5 py-2.5 text-center active:scale-95 transition-transform duration-100 cursor-pointer disabled:bg-gray-400 disabled:text-gray-200 disabled:border-gray-400 disabled:cursor-not-allowed disabled:opacity-70">
                 @if (isLoading) {
-                Sending...
+                {{"forgetForm.process" |translate}}
                 } @else {
-                Send
+                {{"forgetForm.send" |translate}}
                 }
             </button>
         </form>
@@ -57,9 +57,9 @@
             <div class="w-1/3 h-2 bg-gray-400 rounded" [class.!bg-main]="step >= 3"></div>
         </div>
 
-        <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">Verify Code</h1>
+        <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">{{"forgetForm.title2" |translate}}</h1>
         <p class="text-sm text-gray-500 text-center mb-3.5">
-            Please enter the code sent to your email.
+            {{"forgetForm.subtitle2" | translate}}
         </p>
 
         <form (ngSubmit)="handleFPsubmit()" [formGroup]="verifyCodeGroup" class="max-w-md mx-auto">
@@ -71,22 +71,21 @@
                 @if (verifyCodeGroup.get('resetCode')?.touched && verifyCodeGroup.get('resetCode')?.errors) {
                 <div class="p-4 my-2 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400">
                     @if (verifyCodeGroup.get('resetCode')?.getError('required')) {
-                    <p>Code is required</p>
+                    <p>{{"forgetForm.codeError" |translate}}</p>
                     } @else if (verifyCodeGroup.get('resetCode')?.getError('minlength')) {
-                    <p>Code must be at least 6 numbers</p>
+                    <p>{{"forgetForm.codeError2" |translate}}</p>
                     }
                 </div>
                 }
                 <label for="floating_code"
-                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Enter
-                    code</label>
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"forgetForm.code" |translate}}</label>
             </div>
             <button [disabled]="isLoading" type="submit"
                 class="text-white bg-main hover:bg-transparent hover:border hover:border-main hover:text-main font-medium rounded-lg mt-2.5 text-sm w-full px-5 py-2.5 text-center active:scale-95 transition-transform duration-100 cursor-pointer disabled:bg-gray-400 disabled:text-gray-200 disabled:border-gray-400 disabled:cursor-not-allowed disabled:opacity-70">
                 @if (isLoading) {
-                Sending...
+                {{"forgetForm.process" |translate}}
                 } @else {
-                Send
+                {{"forgetForm.send" |translate}}
                 }
             </button>
         </form>
@@ -101,9 +100,9 @@
             <div class="w-1/3 h-2 bg-gray-400 rounded" [class.!bg-main]="step >= 3"></div>
         </div>
 
-        <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">Set Password</h1>
+        <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">{{"forgetForm.title3" |translate}}</h1>
         <p class="text-sm text-gray-500 text-center mb-3.5">
-            Please enter your new password.
+            {{"forgetForm.subtitle3" |translate}}
         </p>
 
         <form (ngSubmit)="handleEnd()" [formGroup]="setPasswordGroup" class="max-w-md mx-auto">
@@ -113,8 +112,7 @@
                     placeholder=" " 
                 />
                 <label for="floating_email"
-                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email
-                    address</label>
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"forgetForm.email" |translate}}</label>
             </div>
 
             <div class="relative z-0 w-full my-3 group">
@@ -132,15 +130,15 @@
                 </div>
                 }
                 <label for="floating_password"
-                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">New
-                    password</label>
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"forgetForm.newPass" |translate}}
+                </label>
             </div>
             <button [disabled]="isLoading" type="submit"
                 class="text-white bg-main hover:bg-transparent hover:border hover:border-main hover:text-main font-medium rounded-lg mt-2.5 text-sm w-full px-5 py-2.5 text-center active:scale-95 transition-transform duration-100 cursor-pointer disabled:bg-gray-400 disabled:text-gray-200 disabled:border-gray-400 disabled:cursor-not-allowed disabled:opacity-70">
                 @if (isLoading) {
-                Sending...
+                {{"forgetForm.process" |translate}}
                 } @else {
-                Send
+                {{"forgetForm.send" |translate}}
                 }
             </button>
         </form>
