--- a/src/app/shared/components/product-card/product-card.html
+++ b/src/app/shared/components/product-card/product-card.html
@@ -46,7 +46,7 @@
     (click)="addProductCart(product._id)"
     class="cursor-pointer w-full mt-3 bg-green-500 py-2 rounded-lg text-white font-medium opacity-0 group-hover:opacity-100 transition-all duration-300 translate-y-6 group-hover:translate-y-0 active:scale-[90%]"
   >
-    Add to Cart
+    {{ 'products.add' | translate }}
   </button>
 
   <!-- Wishlist Button -->
