--- a/src/app/features/brands/brands.html
+++ b/src/app/features/brands/brands.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto px-4 py-4">
-  <h2 class="text-3xl font-semibold mb-5 text-gray-700">All Brands</h2>
+  <h2 class="text-3xl font-semibold mb-5 text-gray-700">{{ 'brands.All' | translate }}</h2>
   <div class="row">
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
       @for (brand of brands; track $index) {
@@ -44,7 +44,7 @@
           (click)="closeModal()"
           class="bg-main cursor-pointer text-white px-6 py-2 rounded-md hover:bg-green-700 transition"
         >
-          Close
+          {{ 'brands.Close' | translate }}
         </button>
       </div>
     </div>
