--- a/src/app/features/cart/cart.html
+++ b/src/app/features/cart/cart.html
@@ -5,8 +5,8 @@
   </div>
   } @else {
   <div class="bg-gray-100 p-4 rounded h-screen overflow-y-auto">
-    <h1 class="font-semibold text-3xl">Shop Cart</h1>
-    <span class="text-main mt-2 mb-4 text-xl block">Total cart price: {{ cartData?.data?.totalCartPrice }}</span>
+    <h1 class="font-semibold text-3xl">{{"cart.title" |translate}}</h1>
+    <span class="text-main mt-2 mb-4 text-xl block">{{"cart.subtitle" |translate}} {{ cartData?.data?.totalCartPrice }}</span>
 
     @for (item of cartData?.data?.products; track $index; let i = $index) {
     <div class="flex flex-col sm:flex-row w-full bg-white p-4 rounded-xl shadow mb-3 gap-3 sm:gap-0">
@@ -23,13 +23,13 @@
             {{ item.product.title }}
           </p>
           <span [routerLink]="['/product-details', item.product._id]" class="cursor-pointer text-main block">
-            Price: {{ item.price }}
+            {{"cart.Price" |translate}} {{ item.price }}
           </span>
 
           <button (click)="deleteProduct(item.product._id)"
             class="mt-2 flex gap-2 items-center px-2 py-1 rounded bg-red-500 text-white text-sm hover:bg-red-600 transition cursor-pointer">
             <i class="fa-solid fa-trash"></i>
-            <span>Remove</span>
+            <span>{{"cart.Remove" |translate}}</span>
           </button>
         </div>
 
@@ -60,7 +60,7 @@
 
     } @empty {
     <div class="text-center py-4">
-      <p class="text-gray-500">Your cart is empty</p>
+      <p class="text-gray-500">{{"cart.Empty" |translate}}</p>
     </div>
     }
 
@@ -71,7 +71,7 @@
       (click)="clearCart()"
       class="bg-red-500 rounded text-white px-4 py-2 cursor-pointer active:scale-[.95]"
     >
-      Clear cart
+      {{"cart.Clear" |translate}}
     </button>
 
     <!-- Right (checkout buttons) -->
@@ -80,14 +80,14 @@
         (click)="isFormOpen = true; paymentMethod = 'cash'"
         class="text-white bg-main hover:bg-green-700 cursor-pointer active:scale-[.95] focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded text-sm px-5 py-2.5 text-center"
       >
-        Checkout via Cash
+        {{"cart.CheckoutCash" |translate}}
       </button>
 
       <button
         (click)="isFormOpen = true; paymentMethod = 'card'"
         class="bg-main hover:bg-green-700 rounded text-white px-4 py-2 cursor-pointer active:scale-[.95]"
       >
-        Checkout via Credit Card
+        {{"cart.CheckoutCredit" |translate}}
       </button>
     </div>
   </div>
@@ -102,14 +102,14 @@
   class="hidden fixed inset-0 bg-black/70 justify-center items-center">
   <form (click)="$event.stopPropagation()" (ngSubmit)="paymentMethod === 'cash' ? checkoutCash() : checkoutCart()" [formGroup]="addressForm"
     class="max-w-3/4 w-96 bg-white p-4 rounded">
-    <h2 class="text-2xl mb-3">Address Form</h2>
+    <h2 class="text-2xl mb-3">{{"cart.Address" |translate}}</h2>
 
     <div class="relative z-0 w-full mb-5 group">
       <input formControlName="details" type="text" name="floating_text" id="floating_text"
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-main focus:outline-none focus:ring-0 focus:border-main peer"
         placeholder=" " required />
       <label for="floating_text"
-        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Details</label>
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"cart.Details" |translate}}</label>
     </div>
 
     <div class="relative z-0 w-full mb-5 group">
@@ -117,7 +117,7 @@
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-main focus:outline-none focus:ring-0 focus:border-main peer"
         placeholder=" " />
       <label for="floating_phone"
-        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Phone</label>
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"cart.Phone" |translate}}</label>
     </div>
 
     <div class="relative z-0 w-full mb-5 group">
@@ -125,12 +125,12 @@
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-main focus:outline-none focus:ring-0 focus:border-main peer"
         placeholder=" " />
       <label for="floating_text"
-        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">City</label>
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-main peer-focus:dark:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"cart.City" |translate}}</label>
     </div>
 
     <button type="submit"
       class="text-white bg-main hover:bg-main focus:ring-4 focus:outline-none focus:ring-main font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-main dark:hover:bg-main dark:focus:ring-main">
-      Submit
+      {{"cart.Submit" |translate}}
     </button>
   </form>
 </div>
