--- a/src/app/features/login/login.html
+++ b/src/app/features/login/login.html
@@ -6,10 +6,10 @@
     <div
         class="bg-white rounded-lg shadow-md shadow-black py-6 px-4 sm:px-6 md:px-8 w-11/12 sm:w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
         <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">
-            Login Now
+            {{ 'login&register.title' | translate }}
         </h1>
         <p class="text-sm text-gray-500 text-center mb-2.5">
-            Please enter your email and password to access your account.
+           {{ 'login&register.subtitle' | translate }}
         </p>
 
         <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class="w-full">
@@ -23,16 +23,16 @@
                 @if (loginForm.get('email')?.touched && loginForm.get('email')?.errors) {
                 <div class="p-4 my-2 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400">
                     @if (loginForm.get('email')?.getError('required')) {
-                    <p>Email is required</p>
+                    <p>{{ 'login&register.emailError' | translate }}</p>
                     } @else if (loginForm.get('email')?.getError('email')) {
-                    <p>Invalid email format (example@email.com)</p>
+                    <p>{{ 'login&register.emailError2' | translate }}</p>
                     }
                 </div>
                 }
 
                 <label for="floating_email"
                     class="absolute text-sm text-gray-500 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6 peer-focus:text-main">
-                    Email
+                    {{ 'login&register.email' | translate }}
                 </label>
             </div>
 
@@ -78,11 +78,11 @@
                 @if (loginForm.get('password')?.touched && loginForm.get('password')?.errors) {
                 <div class="p-4 my-2 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400">
                     @if (loginForm.get('password')?.getError('required')) {
-                    <p>Password is required</p>
+                    <p>{{'login&register.passwordError' | translate}}</p>
                     } @else if (loginForm.get('password')?.getError('minlength')) {
-                    <p>Password must be at least 6 characters</p>
+                    <p>{{'login&register.passwordError2' | translate}}</p>
                     } @else {
-                    <p>Password must start with a capital letter first and have 5-11 letters or numbers</p>
+                    <p>{{'login&register.passwordError3' | translate}}</p>
                     }
                 </div>
                 }
@@ -92,12 +92,12 @@
            top-3 -z-10 origin-[0] peer-placeholder-shown:scale-100 
            peer-placeholder-shown:translate-y-0 peer-focus:scale-75 
            peer-focus:-translate-y-6 peer-focus:text-main">
-                    Password
+                    {{'login&register.password' | translate}}
                 </label>
             </div>
 
             <p class="text-green-500 text-sm mb-3 cursor-pointer hover:underline" (click)="goToReset()">
-                Forgot your password?
+                {{'login&register.forgot' | translate}}
             </p>
 
 
@@ -108,9 +108,9 @@
          disabled:bg-gray-400 disabled:text-gray-200 disabled:border-gray-400 
          disabled:cursor-not-allowed disabled:opacity-70">
                 @if (isLoading) {
-                Processing...
+                {{'login&register.process' | translate}}
                 } @else {
-                Login
+                {{'login&register.Login' | translate}}
                 }
             </button>
         </form>
