--- a/src/app/features/register/register.html
+++ b/src/app/features/register/register.html
@@ -5,9 +5,9 @@
   ">
   <div
     class="bg-white rounded-lg shadow-md shadow-black py-6 px-4 sm:px-6 md:px-8 w-11/12 sm:w-3/4 md:w-2/3 lg:w-1/2 xl:w-1/3">
-    <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">Register Now</h1>
+    <h1 class="text-2xl sm:text-3xl md:text-4xl text-main text-center mb-2.5">{{'login&register.title2' | translate}}</h1>
     <p class="text-sm text-gray-500 text-center mb-2.5">
-      Please fill in the form to create an account.
+      {{'login&register.subtitle2' | translate}}
     </p>
 
     <form (ngSubmit)="onSubmit()" [formGroup]="registerForm" class="w-full">
@@ -80,25 +80,25 @@
         (ControllerName(item)?.errors || (item === 'rePassword' && registerForm.hasError('misMatch')))) {
         <div class="p-4 my-2 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400">
           @if (ControllerName(item)?.getError('required')) {
-            <p>{{ item }} is required</p>
+            <p>{{ 'login&register.' + item | translate }} {{'login&register.isReq' |translate}}</p>
           }
           @else if (ControllerName(item)?.getError('minlength')) {
-            <p>{{ item }} must be at least 3 characters</p>
+            <p>{{ 'login&register.' + item | translate }} {{'login&register.isReq2' |translate}}</p>
           }
           @else if (ControllerName(item)?.getError('maxlength') && item === 'name') {
-            <p>{{ item }} must be maximum 20 characters</p>
+            <p>{{ 'login&register.' + item | translate }} {{'login&register.isReq3' |translate}}</p>
           }
           @else if (ControllerName(item)?.getError('email')) {
-            <p>{{ item }} must be in email format (example@email.com)</p>
+            <p>{{ 'login&register.' + item | translate }} {{'login&register.isReq4' |translate}}</p>
           }
           @else if (ControllerName(item)?.getError('pattern') && item === 'password') {
-            <p>{{ item }} must start with a capital letter and have 5-11 letters/numbers</p>
+            <p>{{ 'login&register.' + item | translate }} {{'login&register.isReq5' |translate}}</p>
           }
           @else if (ControllerName(item)?.getError('pattern') && item === 'phone') {
-            <p>Phone must start with 010, 011, 012, or 015 and be 11 digits</p>
+            <p>{{'login&register.isReq6' |translate}}</p>
           }
           @else if (item === 'rePassword' && registerForm.hasError('misMatch')) {
-            <p>Passwords do not match</p>
+            <p>{{'login&register.isReq7' |translate}}</p>
           }
         </div>
       }
@@ -109,7 +109,7 @@
                top-3 -z-10 origin-[0] peer-placeholder-shown:scale-100 
                peer-placeholder-shown:translate-y-0 peer-focus:scale-75 
                peer-focus:-translate-y-6 peer-focus:text-main">
-        <span class="capitalize">{{ item }}</span>
+        <span class="capitalize">{{ 'login&register.' + item | translate }}</span>
       </label>
     </div>
   }
@@ -124,9 +124,9 @@
            disabled:bg-gray-400 disabled:text-gray-200 disabled:border-gray-400 
            disabled:cursor-not-allowed disabled:opacity-70">
     @if (isLoading) {
-      Processing...
+      {{'login&register.process' |translate}}
     } @else {
-      Submit
+      {{'login&register.Register' |translate}}
     }
   </button>
 </form>
