--- a/src/app/features/wishlist/wishlist.html
+++ b/src/app/features/wishlist/wishlist.html
@@ -1,5 +1,5 @@
 <div class="bg-gray-100 p-4 rounded">
-  <h1 class="text-2xl font-semibold mb-4">Wishlist ❤️</h1>
+  <h1 class="text-2xl font-semibold mb-4">{{"wishlist.title" |translate}}</h1>
 
   <div class="flex flex-col gap-3 h-screen overflow-y-auto">
     @if (isLoading) {
@@ -34,7 +34,7 @@
               class="mt-2 flex gap-1 items-center text-red-600 hover:text-red-800 text-sm"
             >
               <i class="fa-solid fa-trash"></i>
-              <span>Remove</span>
+              <span>{{"wishlist.Remove" |translate}}</span>
             </button>
           </div>
 
@@ -44,13 +44,13 @@
               (click)="addProductCart(item._id)"
               class="w-full sm:w-auto px-3 py-1.5 font-semibold text-white bg-green-500 hover:bg-green-600 rounded-lg text-sm transition"
             >
-              Add to Cart
+              {{"wishlist.add" |translate}}
             </button>
           </div>
         </div>
       } @empty {
         <div class="text-center py-4 col-span-3">
-          <p class="text-gray-600">Your wishlist is empty.</p>
+          <p class="text-gray-600">{{"wishlist.Empty" |translate}}</p>
         </div>
       }
     }
